--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import GitHublight from "@/assets/github_light.svg";
+
 ---
 
 <header class=" z-10 top-0 left-0 flex items-center py-7 w-full bg-[#365768] h-20 px-10">
@@ -16,7 +16,7 @@ import GitHublight from "@/assets/github_light.svg";
     >
       <section class="flex items-center justify-between w-full">
         <p class="group-hover:scale-105 transition-transform">GitHub Code</p>
-        <GitHublight class="group-hover:scale-105 transition-transform" />
+        <img class="group-hover:scale-105 transition-transform"  src="svg/github.svg" />
       </section>
     </a>
   </div>
