change imgs folder

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
 
 <header class=" z-10 top-0 left-0 flex items-center py-7 w-full bg-[#365768] h-20 px-10">
   <a href="/" class="text-[#b9e9fe] hover:text-[#b1b0b3] hover:scale-105 transition-transform">
-    <img class="w-10 h-10 rounded-[5px]" src="/src/assets/logo.webp" alt="">
+    <img class="w-10 h-10 rounded-[5px]" src="/imgs/logo.webp" alt="">
   </a>
 
   <div class="flex items-center gap-8 ml-auto">
