--- a/src/components/AboutProject.astro
+++ b/src/components/AboutProject.astro
@@ -8,7 +8,7 @@
   >
     <img
       class="w-60 md:w-80"
-      src="/src/assets/main-logo.png"
+      src="/imgs/main-logo.png"
       alt="ShUrl Logo"
     />
     <p class="text-lg md:text-xl leading-relaxed max-w-4xl h-auto">
